--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "sweetalert": "^2.1.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
